php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #23201 set_file_buffer crashes Apache
Submitted: 2003-04-14 08:15 UTC Modified: 2003-04-14 20:35 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: gfraley5 at earthlink dot net Assigned: wez (profile)
Status: Closed Package: Filesystem function related
PHP Version: 4.3.2RC1 OS: Win32 and Linux
Private report: No CVE-ID: None
 [2003-04-14 08:15 UTC] gfraley5 at earthlink dot net
The set_file_buffer() and stream_set_write_buffer (in 4.3.2 RC's and CVS) crashes Apache 1.3.27.  This code, when executed in 4.3.1 and prior, does not crash Apache.

<?
$file = '/web/somefile';
$csv_buffer_size = 9192;
echo 'file exists ? '.file_exists($file);
echo '<br />';
$fp = fopen($file,'w') or die('Unable to access file: '.$file);
set_file_buffer($fp,$csv_buffer_size);
?>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-04-14 20:35 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC