Fixed bug #23201 (set_file_buffer() crashes with stdio streams).

#Already in PHP 5.0 no need for MFH